--- a/package.json
+++ b/package.json
@@ -41,5 +41,6 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.5"
-  }
+  },
+  "deploy": "ng build --prod --base-href=/proyecto-final-Ing-Web/"
 }
